feat: setup firebase android

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/analytics": "^15.6.0",
+    "@react-native-firebase/app": "^15.6.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@types/styled-components": "^5.1.26",
