--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.68.2",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "styled-components": "^5.3.5"
